<!--
Licensed Materials - Property of IBM

5747-SM3

(C) Copyright IBM Corp. 1999, 2012 All Rights Reserved.

US Government Users Restricted Rights - Use, duplication or
disclosure restricted by GSA ADP Schedule Contract with
IBM Corp.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/usernameGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uname" 
            android:layout_marginRight="15dip"/>

        <EditText
            android:id="@+id/uname"
                        android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="0.22"
            android:hint="@string/unameHint"
            android:inputType="text"
             >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordGroup"
                    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameGroup"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:layout_marginRight="25dip" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="0.22"
            android:hint="@string/passwordHint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sslGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordGroup"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssl"
            android:layout_marginRight="60dip" />

        <CheckBox
            android:id="@+id/sslCheckBox"
                        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty" />

        <EditText
            android:id="@+id/sslKeyLocaltion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/sslKeyLocaltion"
            android:inputType="text" > 

        </EditText>

        <Button
            android:id="@+id/sslKeyBut"
            style="?android:attr/buttonStyleSmall"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timeoutGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sslGroup"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeout"
            android:layout_marginRight="35dip" />

        <EditText
            android:id="@+id/timeout"
                        android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="0.22"
            android:hint="@string/timeoutHint"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/keepaliveGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeoutGroup"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keepalive" 
            android:singleLine="false"
            android:layout_marginRight="25dip"/>

        <EditText
            android:id="@+id/keepalive"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="0.22"
            android:hint="@string/keepaliveHint"
            android:inputType="number" />
    </LinearLayout>

</RelativeLayout>
